--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bi bi-trophy"></i> <span>Projects</span></a></li>
         <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <li><a href="resume/Abdulwahab-Abdulwarith.pdf" download class="nav-link scrollto"><i class="bi bi-download"></i> <span>Download Resume</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
