--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bi bi-trophy"></i> <span>Projects</span></a></li>
         <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-        <li><a href="resume/Abdulwahab-Abdulwarith.pdf" download class="nav-link scrollto"><i class="bi bi-download"></i> <span>Download Resume</span></a></li>
+        <li><a href="resume/Abdulwahab-Abdulwarith.pdf" download class="nav-link scrollto"><i class="bi bi-download"></i> <span>Download CV</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -90,7 +90,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.abdulwarith.netlify.app</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.abdulwarith.herokuapp.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+234 814 7801 152</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lagos, Nigeria.</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Fulltime:</strong> <span>Available</span></li>
