--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>National Diploma</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>National Diploma In Mechanical Engineering</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>E-mail:</strong> <span>adebayoayomide6464@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
@@ -326,7 +326,7 @@
 
         <div class="section-title">
           <h2>Projects</h2>
-          <p>“Plans are only good intentions unless they immediately degenerate into hard work.” – <strong>Peter Drucker.</strong> Simply toggle between projects for easy access. </p>
+          <p>“Plans are only good intentions unless they immediately degenerate into hard work.” – <strong>Peter Drucker.</strong> I have never been at peace when I know I have work pending. I strive to finish my works as soon as possible and ensure it is as efficient as possible. </p>
         </div>
 
         <div class="row">
@@ -347,7 +347,7 @@
               <img src="assets/img/portfolio/anvient.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Anvient Health Care</h4>
-                <p>Fully functional with Admin Panel</p>
+                <p>Applying for nursing jobs has never been this easy. You'd need to go check this out.</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/anvient.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Anvient Health Care Landing Page"><i class="bx bx-plus"></i></a>
                   <a href="http://anvienthealth.com" class="portfolio-details-lightbox" data-glightbox="type: external" title="View live site"><i class="bx bx-link"></i></a>
@@ -375,7 +375,7 @@
               <img src="assets/img/portfolio/caramel.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Caramel Shopping</h4>
-                <p>Fully functional with Admin Panel</p>
+                <p>Caramel Shopping is an E-commerce website that also includes a payment processor. You can add categorized products, delete, update and do a lot more on this masterpiece. Go on to check it out.</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/caramel.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Caramel Shooping Landing Page"><i class="bx bx-plus"></i></a>
                   <a href="https://caramel-shopping.herokuapp.com" class="portfolio-details-lightbox" data-glightbox="type: external" title="View live site"><i class="bx bx-link"></i></a>
@@ -391,7 +391,7 @@
               <img src="assets/img/portfolio/quote.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Quote Generator</h4>
-                <p>Quote Generator with smooth animation.</p>
+                <p>With quotes, we get to re-think most of our decisions and compare them with real life experiences. Dive in to get started!</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/quote.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Quote Generator App"><i class="bx bx-plus"></i></a>
                   <a href="https://aquotegeneratorapp.netlify.app" class="portfolio-details-lightbox" data-glightbox="type: external" title="View live site"><i class="bx bx-link"></i></a>
@@ -405,7 +405,7 @@
               <img src="assets/img/portfolio/ect.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Easy Computer Technologies</h4>
-                <p>Fully functional with Admin Panel</p>
+                <p>With a feature that enables you to send enquiries and still manages it for you, wow, this is a true masterpiece. You cant wait to check it out.</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/ect.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Easy Computer Technologies Landing Page"><i class="bx bx-plus"></i></a>
                   <a href="https://easycomputertechnologies.herokuapp.com" class="portfolio-details-lightbox" data-glightbox="type: external" title="View live site"><i class="bx bx-link"></i></a>
@@ -419,7 +419,7 @@
               <img src="assets/img/portfolio/gitfinder.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>GitFinder</h4>
-                <p>An app that generates details of a user Github Page with pagination and Preloader.</p>
+                <p>Have you been looking for how to easily get details of a github user. This app provides that in one peice. Check it out.</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/gitfinder.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitFinder"><i class="bx bx-plus"></i></a>
                   <a href="https://abdulwarith001.github.io/GitfFinder/" class="portfolio-details-lightbox" data-glightbox="type: external" title="View live site"><i class="bx bx-link"></i></a>
@@ -433,7 +433,7 @@
               <img src="assets/img/portfolio/blog.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>MI Blog</h4>
-                <p>Still in development.</p>
+                <p>A masterpiece still in development. </p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/blog.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MI Blog Landing Page"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="View live site"><i class="bx bx-link"></i></a>
