--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Abdulwahab Abdulwarith</h1>
-      <p>I'm <span class="typed" data-typed-items="Backend Developer,Frontend Developer, Mobile App Developer, Freelancer, Software Engineer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Backend Developer,Frontend Developer, Mobile App Developer, Freelancer, Software Engineer"></span></p>
       <div class="social-links">
         <a href="https://twitter.com/abdulwarith__" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://github.com/abdulwarith001" target="_blank" class="github"><i class="bx bxl-github"></i></a>
@@ -90,18 +90,14 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.abdulwarith.herokuapp.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.abdulwarith.onrender.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+234 814 7801 152</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lagos, Nigeria.</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Fulltime:</strong> <span>Available</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>National Diploma In Mechanical Engineering</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>E-mail:</strong> <span>adebayoayomide6464@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
             </div>
@@ -215,22 +211,22 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">NODEJS <i class="val">60%</i></span>
+              <span class="skill">NODEJS <i class="val">65%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">EXPRESSJS <i class="val">50%</i></span>
+              <span class="skill">EXPRESSJS <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">REACTJS <i class="val">45%</i></span>
+              <span class="skill">REACTJS <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -293,7 +289,7 @@
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
+            <!-- <div class="resume-item">
               <h4>Chief Technical Officer</h4>
               <h5>2022 - Present</h5>
               <p><em>Qomeon Technologies, Yaba, Lagos State </em></p>
@@ -302,7 +298,7 @@
                 <li>Deployement of projects into selected Cloud Infrastructures.</li>
                 <li>Management and supervision of Databases</li>
               </ul>
-            </div>
+            </div> -->
             <div class="resume-item">
               <h4>Freelancer</h4>
               <h5>2020 - Present</h5>
@@ -344,13 +340,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/anvient.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/booktripp.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Anvient Health Care</h4>
-                <p>Applying for nursing jobs has never been this easy. You'd need to go check this out.</p>
+                <h4>Booktripp</h4>
+                <p>Hotel booking platform that is integrated with admin and vendor functionalities</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/anvient.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Anvient Health Care Landing Page"><i class="bx bx-plus"></i></a>
-                  <a href="http://anvienthealth.com" class="portfolio-details-lightbox" data-glightbox="type: external" title="View live site"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/booktripp.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Booktripp hotel booking platform"><i class="bx bx-plus"></i></a>
+                  <a href="http://booktripp.com" class="portfolio-details-lightbox" data-glightbox="type: external" title="View live site"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -372,13 +368,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/caramel.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/mi-blog.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Caramel Shopping</h4>
-                <p>Caramel Shopping is an E-commerce website that also includes a payment processor. You can add categorized products, delete, update and do a lot more on this masterpiece. Go on to check it out.</p>
+                <h4>MI Blogs</h4>
+                <p>MI Blogs is a website that enables bloggers to have full control over the display of their blog website. It includes features such as change of the entire color used on the website, change of the content layout and so much more.</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/caramel.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Caramel Shooping Landing Page"><i class="bx bx-plus"></i></a>
-                  <a href="https://caramel-shopping.herokuapp.com" class="portfolio-details-lightbox" data-glightbox="type: external" title="View live site"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/mi-blog.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MI Blogs website"><i class="bx bx-plus"></i></a>
+                  <a href="https://mi-blogs.netlify.app" class="portfolio-details-lightbox" data-glightbox="type: external" title="View live site"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -399,8 +395,8 @@
               </div>
             </div>
           </div>
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/ect.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -412,7 +408,8 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div>     -->
+   
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
@@ -458,7 +455,7 @@
 
         <div class="row">
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box iconbox-blue">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -469,7 +466,7 @@
               <h4><a href="">Mobile App Development</a></h4>
               <p>Using the latest technologies, I can bring your idea to <strong>LIFE</strong></p>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box iconbox-red">
@@ -601,7 +598,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Ogijo, Ogun state, Nigeria.</p>
+                <p>Yaba lagos, Nigeria</p>
               </div>
 
               <div class="email">
